Fixed bugs related to edge cloud management api
